--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <img src="./b4.jpg" alt="img" height="15%" width="15%">
-    <h3>Minion Banana Translator</h3>
+    <h3>Braille Translator</h3>
 
     <div class="container">
         <textarea name="inputarea" id="inpTextArea" placeholder="Please Enter the text which you want to translate in Braille" ></textarea>
